fdo#71834: Fix for floating table

Issue :
        - When we have overlapping tables the first table gets
          exported as a table and the second table gets exported
          as a DML/VML shape.
        - While exporting, the system starts with the table row &
          the cell, within which it starts exporting the overlapped
          table, while doing so the previous table attributes were
                  being referred since the variable was shared.

    Implementation:
        - Save and reset the table related attributes before
          calling the WriteDMLTextFrame & writeVMLTextFrame
          functions.
        - Restore the table attributes for further processing after
          having written the shape.

Change-Id: I0052a08c74ffbbebd3eb91a7075a43a4c225b670